Splunk/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: splunk
  namespace: logging-namespace
spec:
  selector:
    app: splunk
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      name: web-interface
    - protocol: TCP
      port: 8088
      targetPort: 8088
      name: splunk-hec
  type: ClusterIP
