Splunk/k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-splunk-traffic
  namespace: logging-namespace
spec:
  podSelector:
    matchLabels:
      app: splunk

  policyTypes:
    - Ingress

  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: allow_hec_splunk
    ports:
    - protocol: TCP
      port: 8088

  - from: []
    ports:
    - protocol: TCP
      port: 8000
